--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,7 @@
 
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -24,37 +24,38 @@
 
 
     <EditText
+        android:id="@+id/editText2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
-        android:ems="10"
-        android:id="@+id/editText2"
-        android:hint="Email"
-        android:layout_marginStart="32dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginEnd="32dp"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="40dp"
-        app:layout_constraintTop_toBottomOf="@+id/logo"
-        app:layout_constraintHorizontal_bias="0.54" />
+        android:ems="10"
+        android:hint="Email"
+        android:inputType="textEmailAddress"
+        app:layout_constraintHorizontal_bias="0.54"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/logo" />
 
     <EditText
+        android:id="@+id/editText4"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:inputType="textPassword"
+        android:layout_marginTop="8dp"
         android:ems="10"
-        android:id="@+id/editText4"
         android:hint="Password"
+        android:inputType="textPassword"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="@+id/editText2"
         app:layout_constraintRight_toRightOf="@+id/editText2"
-        app:layout_constraintTop_toBottomOf="@+id/editText2"
-        app:layout_constraintHorizontal_bias="0.0"
-        android:layout_marginTop="8dp" />
+        app:layout_constraintTop_toBottomOf="@+id/editText2" />
 
     <Button
         android:id="@+id/btnLogin"
         android:layout_width="145dp"
         android:layout_height="wrap_content"
+
         android:text="Login"
         android:theme="@style/ThemeOverlay.MyDarkButton"
         app:layout_constraintBaseline_toBaselineOf="@+id/btnSignup"
@@ -62,16 +63,16 @@
         app:layout_constraintLeft_toLeftOf="@+id/editText4" />
 
     <TextView
-        android:text="@string/reset_password"
+        android:id="@+id/btnReset"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="17dp"
+        android:layout_marginTop="8dp"
 
-        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
-        app:layout_constraintRight_toRightOf="@+id/btnSignup"
+        android:text="@string/reset_password"
+        android:textSize="17sp"
         app:layout_constraintLeft_toLeftOf="@+id/btnLogin"
-        android:id="@+id/btnReset"
-        android:layout_marginTop="8dp" />
+        app:layout_constraintRight_toRightOf="@+id/btnSignup"
+        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
 
    <!-- <com.facebook.login.widget.LoginButton
         android:id="@+id/button_facebook_login"
@@ -89,11 +90,11 @@
         android:id="@+id/btnSignup"
         android:layout_width="145dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:text="Sign up"
         android:theme="@style/ThemeOverlay.MyDarkButton"
         app:layout_constraintHorizontal_weight="1"
         app:layout_constraintRight_toRightOf="@+id/editText4"
-        android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/editText4" />
 
 </android.support.constraint.ConstraintLayout>
