--- a/app/src/main/res/layout/fragment_aboutaqi.xml
+++ b/app/src/main/res/layout/fragment_aboutaqi.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
@@ -24,7 +24,7 @@
             android:layout_marginTop="10dp"
             android:gravity="center"
             android:text="About the AQI"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
         <View
@@ -36,7 +36,7 @@
             android:gravity="center"
             android:text="0-50 คุณภาพดี"
             android:textColor="@color/white"
-            android:textSize="17dp"
+            android:textSize="17sp"
             android:textStyle="bold" />
 
         <View
@@ -50,7 +50,7 @@
             android:paddingTop="5dp"
             android:text="0-50 คุณภาพอากาศอยู่ในเกณฑ์ดี ไม่มีผลกระทบต่อสุขภาพ"
             android:textColor="@color/white"
-            android:textSize="16dp" />
+            android:textSize="16sp" />
 
 
         <View
@@ -63,7 +63,7 @@
             android:gravity="center"
             android:text="51-100 คุณภาพปานกลาง"
             android:textColor="@color/white"
-            android:textSize="17dp"
+            android:textSize="17sp"
             android:textStyle="bold" />
 
         <View
@@ -77,7 +77,7 @@
             android:paddingTop="5dp"
             android:text="51-100 คุณภาพอากาศคุณภาพปานกลาง ไม่มีผลกระทบต่อสุขภาพ"
             android:textColor="@color/white"
-            android:textSize="16dp" />
+            android:textSize="16sp" />
 
 
         <View
@@ -90,7 +90,7 @@
             android:gravity="center"
             android:text="101-200 มีผลกระทบต่อสุขภาพ"
             android:textColor="@color/black"
-            android:textSize="17dp"
+            android:textSize="17sp"
             android:textStyle="bold" />
 
         <View
@@ -104,7 +104,7 @@
             android:text="101-200 คุณภาพอากาศมีผลกระทบต่อสุขภาพ ผู้ป่วยโรคระบบทางเดินหายใจ ควรหลีกเลี่ยงการออกกำลังภายนอกอาคาร
 บุคคลทั่วไป โดยเฉพาะเด็กและผู้สูงอายุ ไม่ควรทำกิจกรรมภายนอกอาคารเป็นเวลานาน"
             android:textColor="@color/black"
-            android:textSize="16dp" />
+            android:textSize="16sp" />
 
 
         <View
@@ -117,7 +117,7 @@
             android:gravity="center"
             android:text="201-300 มีผลกระทบต่อสุขภาพมาก"
             android:textColor="@color/white"
-            android:textSize="17dp"
+            android:textSize="17sp"
             android:textStyle="bold" />
 
         <View
@@ -132,7 +132,7 @@
             android:text="0-50 คุณภาพอากาศมีผลกระทบต่อสุขภาพมาก ผู้ป่วยโรคระบบทางเดินหายใจ ควรหลีกเลี่ยงกิจกรรมภายนอกอาคาร
 บุคคลทั่วไป โดยเฉพาะเด็กและผู้สูงอายุ ควรจำกัดการออกกำลังภายนอกอาคาร"
             android:textColor="@color/white"
-            android:textSize="16dp" />
+            android:textSize="16sp" />
 
 
         <View
@@ -145,7 +145,7 @@
             android:gravity="center"
             android:text="มากกว่า 300 อันตราย"
             android:textColor="@color/white"
-            android:textSize="17dp"
+            android:textSize="17sp"
             android:textStyle="bold" />
 
         <View
@@ -159,7 +159,7 @@
             android:text="0-50 คุณภาพอากาศอยู่ในอันตราย 	บุคคลทั่วไป ควรหลีกเลี่ยงการออกกำลังภายนอกอาคาร
 สำหรับผู้ป่วยโรคระบบทางเดินหายใจ ควรอยู่ภายในอาคาร"
             android:textColor="@color/white"
-            android:textSize="16dp" />
+            android:textSize="16sp" />
 
         <View
             android:layout_height="50dp"
