--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -21,13 +21,13 @@
             android:id="@+id/txtLocation"
             android:layout_width="352dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
             android:gravity="center"
             android:text="Current location"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:textStyle="bold"
-            tools:layout_editor_absoluteX="16dp"
-            android:layout_marginTop="24dp"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_editor_absoluteX="16dp" />
 
 
 
@@ -35,27 +35,27 @@
             android:id="@+id/txtDataBy"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:gravity="center"
             android:text="Data collected by: Myself"
-            android:textSize="17dp"
+            android:textSize="17sp"
             android:textStyle="normal"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/txtLocation"
+            app:layout_constraintLeft_toLeftOf="@+id/txtLocation"
             app:layout_constraintRight_toRightOf="@+id/txtLocation"
-            app:layout_constraintLeft_toLeftOf="@+id/txtLocation" />
+            app:layout_constraintTop_toBottomOf="@+id/txtLocation" />
 
         <TextView
             android:id="@+id/txtStatus_sensor"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:gravity="center"
             android:text="Sensor: Active"
-            android:textSize="17dp"
+            android:textSize="17sp"
             android:textStyle="normal"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/txtDataBy"
+            app:layout_constraintLeft_toLeftOf="@+id/txtDataBy"
             app:layout_constraintRight_toRightOf="@+id/txtDataBy"
-            app:layout_constraintLeft_toLeftOf="@+id/txtDataBy" />
+            app:layout_constraintTop_toBottomOf="@+id/txtDataBy" />
 
         <pl.pawelkleczkowski.customgauge.CustomGauge
             android:id="@+id/gaugeMaster"
@@ -65,6 +65,7 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:layout_gravity="center"
+            android:layout_marginTop="16dp"
             android:paddingBottom="10dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
@@ -83,41 +84,42 @@
             app:gaugeStrokeColor="#bdbdbd"
             app:gaugeStrokeWidth="20dp"
             app:gaugeSweepAngle="180"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/txtStatus_sensor"
             app:layout_constraintLeft_toLeftOf="@+id/txtStatus_sensor"
-            app:layout_constraintRight_toRightOf="@+id/txtStatus_sensor" />
+            app:layout_constraintRight_toRightOf="@+id/txtStatus_sensor"
+            app:layout_constraintTop_toBottomOf="@+id/txtStatus_sensor" />
 
         <TextView
             android:id="@+id/txtAQI"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginTop="64dp"
             android:text="AQI = 36"
-            android:textSize="20dp"
             android:textColor="@color/md_red_400"
+            android:textSize="20sp"
             android:textStyle="bold"
-            app:layout_constraintTop_toTopOf="@+id/gaugeMaster"
             app:layout_constraintLeft_toLeftOf="@+id/txtStatus_sensor"
             app:layout_constraintRight_toRightOf="@+id/txtStatus_sensor"
-            android:layout_marginTop="64dp" />
+            app:layout_constraintTop_toTopOf="@+id/gaugeMaster" />
 
         <Button
             android:id="@+id/btnRandom"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Random Gas"
             android:layout_marginTop="24dp"
-            app:layout_constraintTop_toBottomOf="@+id/txtAQI"
+            android:text="Random Gas"
             app:layout_constraintLeft_toLeftOf="@+id/txtStatus_sensor"
-            app:layout_constraintRight_toRightOf="@+id/txtStatus_sensor" />
+            app:layout_constraintRight_toRightOf="@+id/txtStatus_sensor"
+            app:layout_constraintTop_toBottomOf="@+id/txtAQI" />
 
 
             <pl.pawelkleczkowski.customgauge.CustomGauge
                 android:id="@+id/gPM25"
                 android:layout_width="147dp"
                 android:layout_height="148dp"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="32dp"
                 android:paddingTop="50dp"
                 app:gaugeEndValue="100"
                 app:gaugePointEndColor="#F44336"
@@ -129,10 +131,8 @@
                 app:gaugeStrokeColor="#B2EBF2"
                 app:gaugeStrokeWidth="10dp"
                 app:gaugeSweepAngle="100"
-                android:layout_marginTop="32dp"
-                app:layout_constraintTop_toBottomOf="@+id/btnRandom"
-                android:layout_marginStart="32dp"
-                app:layout_constraintLeft_toLeftOf="parent" />
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btnRandom" />
 
 
             <pl.pawelkleczkowski.customgauge.CustomGauge
@@ -141,6 +141,8 @@
                 android:layout_height="148dp"
 
 
+                android:layout_marginEnd="32dp"
+                android:layout_marginStart="8dp"
                 android:paddingBottom="00dp"
                 android:paddingTop="50dp"
                 app:gaugeEndValue="100"
@@ -153,18 +155,17 @@
                 app:gaugeStrokeColor="#B2EBF2"
                 app:gaugeStrokeWidth="10dp"
                 app:gaugeSweepAngle="100"
+                app:layout_constraintHorizontal_bias="0.25"
                 app:layout_constraintLeft_toRightOf="@+id/gPM25"
-                app:layout_constraintTop_toTopOf="@+id/gPM25"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="32dp"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintHorizontal_bias="0.25" />
+                app:layout_constraintTop_toTopOf="@+id/gPM25" />
 
         <pl.pawelkleczkowski.customgauge.CustomGauge
             android:id="@+id/gHO2"
             android:layout_width="147dp"
             android:layout_height="148dp"
 
+            android:layout_marginTop="8dp"
             android:paddingBottom="0dp"
             android:paddingTop="50dp"
             app:gaugeEndValue="100"
@@ -177,9 +178,8 @@
             app:gaugeStrokeColor="#B2EBF2"
             app:gaugeStrokeWidth="10dp"
             app:gaugeSweepAngle="100"
-            app:layout_constraintTop_toBottomOf="@+id/gPM25"
             app:layout_constraintLeft_toLeftOf="@+id/gPM25"
-            android:layout_marginTop="8dp" />
+            app:layout_constraintTop_toBottomOf="@+id/gPM25" />
 
         <pl.pawelkleczkowski.customgauge.CustomGauge
                 android:id="@+id/gSO2"
@@ -197,8 +197,8 @@
                 app:gaugeStrokeColor="#B2EBF2"
                 app:gaugeStrokeWidth="10dp"
                 app:gaugeSweepAngle="100"
-            app:layout_constraintTop_toTopOf="@+id/gHO2"
-            app:layout_constraintLeft_toLeftOf="@+id/gCO" />
+            app:layout_constraintLeft_toLeftOf="@+id/gCO"
+            app:layout_constraintTop_toTopOf="@+id/gHO2" />
 
 
 
@@ -206,16 +206,16 @@
                 android:id="@+id/txtPM25"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_marginTop="75dp"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="20"
                 android:textColor="@color/md_red_300"
-                android:textSize="16dp"
-                app:layout_constraintTop_toTopOf="@+id/gPM25"
+                android:textSize="16sp"
                 app:layout_constraintLeft_toLeftOf="@+id/gPM25"
                 app:layout_constraintRight_toLeftOf="@+id/gCO"
-                android:layout_marginEnd="8dp"
-                android:layout_marginTop="75dp" />
+                app:layout_constraintTop_toTopOf="@+id/gPM25" />
 
             <TextView
                 android:id="@+id/txtCO"
@@ -225,7 +225,7 @@
                 android:gravity="center"
                 android:text="20"
                 android:textColor="@color/md_red_300"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 app:layout_constraintLeft_toLeftOf="@+id/gCO"
                 app:layout_constraintRight_toRightOf="@+id/gCO"
                 app:layout_constraintTop_toTopOf="@+id/txtPM25" />
@@ -234,15 +234,15 @@
                 android:id="@+id/txtH2O"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="75dp"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="20"
-                android:textSize="16dp"
                 android:textColor="@color/md_red_300"
-                app:layout_constraintTop_toBottomOf="@+id/gPM25"
+                android:textSize="16sp"
                 app:layout_constraintLeft_toLeftOf="@+id/gHO2"
                 app:layout_constraintRight_toRightOf="@+id/gHO2"
-                android:layout_marginTop="75dp" />
+                app:layout_constraintTop_toBottomOf="@+id/gPM25" />
 
             <TextView
                 android:id="@+id/txtSO2"
@@ -251,11 +251,11 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="20"
-                android:textSize="16dp"
                 android:textColor="@color/md_red_300"
-                app:layout_constraintTop_toTopOf="@+id/txtH2O"
+                android:textSize="16sp"
                 app:layout_constraintLeft_toLeftOf="@+id/gSO2"
-                app:layout_constraintRight_toRightOf="@+id/gSO2" />
+                app:layout_constraintRight_toRightOf="@+id/gSO2"
+                app:layout_constraintTop_toTopOf="@+id/txtH2O" />
 
 
 
@@ -263,9 +263,9 @@
             android:layout_width="368dp"
             android:layout_height="1dp"
             android:background="@android:color/darker_gray"
-            app:layout_constraintTop_toBottomOf="@+id/gHO2"
-            app:layout_constraintRight_toRightOf="@+id/gSO2"
             app:layout_constraintLeft_toLeftOf="@+id/gHO2"
+            app:layout_constraintRight_toRightOf="@+id/gSO2"
+            app:layout_constraintTop_toBottomOf="@+id/gHO2"
             />
 
         <TextView
@@ -273,13 +273,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="คุณภาพอากาศ"
-            android:textSize="20dp"
-            android:textStyle="bold"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/gHO2"
+            android:text="คุณภาพอากาศ"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintLeft_toLeftOf="@+id/gHO2"
             app:layout_constraintRight_toRightOf="@+id/gSO2"
-            app:layout_constraintLeft_toLeftOf="@+id/gHO2" />
+            app:layout_constraintTop_toBottomOf="@+id/gHO2" />
 
 
         <TextView
@@ -287,23 +287,23 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginTop="24dp"
             android:text="ทดสอบ"
-            android:textSize="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/recyclerView_recom"
-            app:layout_constraintRight_toRightOf="@+id/recyclerView_recom"
+            android:textSize="20sp"
             app:layout_constraintLeft_toLeftOf="@+id/recyclerView_recom"
-            android:layout_marginTop="24dp" />
+            app:layout_constraintRight_toRightOf="@+id/recyclerView_recom"
+            app:layout_constraintTop_toBottomOf="@+id/recyclerView_recom" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerView_recom"
 
             android:layout_width="0dp"
             android:layout_height="453dp"
-            tools:listitem="@layout/item_recommend"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/txt3"
-            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txt3"
+            tools:listitem="@layout/item_recommend"
             >
 
         </android.support.v7.widget.RecyclerView>
