--- a/app/src/main/res/layout/activity_district.xml
+++ b/app/src/main/res/layout/activity_district.xml
@@ -53,6 +53,7 @@
         layout="@layout/gas"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
