--- a/app/src/main/res/layout/activity_gas.xml
+++ b/app/src/main/res/layout/activity_gas.xml
@@ -7,9 +7,23 @@
     android:orientation="vertical"
     tools:context=".GraphGasActivity">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="0dp"
+        android:layout_height="56dp"
+        android:background="@color/colorPrimary"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_scrollFlags="scroll|enterAlways"
+        app:popupTheme="@style/AppTheme.PopupOverlay"
+        app:subtitleTextColor="#FFFFFF"
+        app:titleTextColor="#FFFFFF"
+        tools:layout_editor_absoluteY="0dp" />
+
     <org.eazegraph.lib.charts.ValueLineChart xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/cubiclinechart"
-        android:layout_width="344dp"
+        android:layout_width="0dp"
         android:layout_height="200dp"
         app:egCurveSmoothness="0.4"
         app:egIndicatorLineColor="#FE6DA8"
@@ -17,6 +31,8 @@
         app:egShowStandardValue="true"
         app:egUseCubic="true"
         app:egUseOverlapFill="true"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="0dp" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 </android.support.constraint.ConstraintLayout>
