--- a/app/src/main/res/layout/floating_other_district.xml
+++ b/app/src/main/res/layout/floating_other_district.xml
@@ -26,18 +26,18 @@
                 app:fabSize="mini" />
         </com.lzp.floatingactionbuttonplus.FabTagLayout>
 
-        <com.lzp.floatingactionbuttonplus.FabTagLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:tagText="Navigate to">
+        <!-- <com.lzp.floatingactionbuttonplus.FabTagLayout
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             app:tagText="Navigate to">
 
-            <android.support.design.widget.FloatingActionButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_navigateto"
-                app:backgroundTint="#818aa7"
-                app:fabSize="mini" />
-        </com.lzp.floatingactionbuttonplus.FabTagLayout>
+             <android.support.design.widget.FloatingActionButton
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:src="@drawable/ic_navigateto"
+                 app:backgroundTint="#818aa7"
+                 app:fabSize="mini" />
+         </com.lzp.floatingactionbuttonplus.FabTagLayout>-->
 
 
         <com.lzp.floatingactionbuttonplus.FabTagLayout
