--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -20,18 +20,31 @@
 
 
         <TextView
-            android:id="@+id/txtLocation"
+            android:id="@+id/txtMode"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:gravity="center"
-            android:text="Current location"
+            android:text="Mode"
             android:textSize="17sp"
-
+            android:textStyle="bold"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <TextView
+            android:id="@+id/txtLocation"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:gravity="center"
+            android:text="Current location"
+            android:textSize="17sp"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="@id/txtMode"
+            app:layout_constraintRight_toRightOf="@id/txtMode"
+            app:layout_constraintTop_toTopOf="@id/txtMode" />
 
         <TextView
             android:id="@+id/txtlastUpdate"
@@ -48,6 +61,7 @@
             app:layout_constraintTop_toBottomOf="@+id/txtLocation" />
 
         <include
+            android:id="@+id/include"
             layout="@layout/floating_district"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -65,6 +79,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtlastUpdate" />
