--- a/app/src/main/res/layout/item_favorite.xml
+++ b/app/src/main/res/layout/item_favorite.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="5dp"
     android:clickable="true"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    card_view:cardCornerRadius="7dp">
 
     <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/constraintBackground"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -53,17 +57,17 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtsname" />
 
-        <View
-            android:id="@+id/SplitLine_hor1"
-            android:layout_width="368dp"
-            android:layout_height="2dp"
-            android:layout_marginLeft="0dp"
-            android:layout_marginRight="0dp"
-            android:layout_marginTop="75dp"
-            android:background="@color/gray_active_icon"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtsname" />
+        <!-- <View
+             android:id="@+id/SplitLine_hor1"
+             android:layout_width="368dp"
+             android:layout_height="2dp"
+             android:layout_marginLeft="0dp"
+             android:layout_marginRight="0dp"
+             android:layout_marginTop="75dp"
+             android:background="@color/gray_active_icon"
+             app:layout_constraintLeft_toLeftOf="parent"
+             app:layout_constraintRight_toRightOf="parent"
+             app:layout_constraintTop_toBottomOf="@+id/txtsname" />-->
 
         <Button
             android:id="@+id/btnBin"
