--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item
-        android:id="@+id/action_search"
-        android:orderInCategory="100"
-        android:title="@string/abc_search_hint"
-        app:showAsAction="always" />
-    <item
+<menu>
+    <!--  <item
+          android:id="@+id/action_search"
+          android:orderInCategory="100"
+          android:title="@string/abc_search_hint"
+          app:showAsAction="always" />-->
+    <!--<item
         android:id="@+id/iconProfile"
         android:icon="@drawable/ic_profile"
         android:orderInCategory="4"
         android:title="Change style"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="ifRoom" />-->
 
 </menu>
